# strategic-alpha-suite

./: .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  ARCHITECTURE.md  CONFIG_GUIDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md
.github/workflows/: ci.yml
sal_dashboard/: .coverage  .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  verify_setup.py
sal_dashboard/.streamlit/: config.toml  secrets.toml.example
sal_dashboard/app/: streamlit_app.py
sal_dashboard/app/components/: __init__.py  charts.py  kpi_cards.py  tables.py
sal_dashboard/artifacts/: comps_table.csv  dcf_sensitivity.csv  stress_results.json  supply_metrics.csv  var_results.json
sal_dashboard/data/financials/: sample_10k_risk.txt
sal_dashboard/data/supply_chain/: sample_edges.csv
sal_dashboard/src/: __init__.py  config.py  database.py  health.py  logging_config.py  macro.py  rate_limiter.py  risk.py  secrets_manager.py  supply.py  valuation.py
sal_dashboard/tests/: conftest.py  test_database.py  test_health.py  test_rate_limiter.py
scripts/: sal  sal.cmd
strategic_alpha/: .coverage  .env.example  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
strategic_alpha/artifacts/: comps_table.csv  dcf_sensitivity.csv  stress_results.json  supply_metrics.csv  var_results.json
strategic_alpha/data/financials/: sample_10k_risk.txt
strategic_alpha/data/macro/: sample_macro.csv
strategic_alpha/data/supply_chain/: sample_edges.csv
strategic_alpha/notebooks/: README.md  nvda_deep_dive.ipynb
strategic_alpha/src/: __init__.py  analyze_company.py  config.py  macro_analysis.py  report_generator.py  risk_model.py  sec_parser.py  supply_mapping.py  utils.py  valuation.py
strategic_alpha/src/strategic_alpha/: __init__.py  cli.py
strategic_alpha/tests/: conftest.py  test_macro.py  test_risk.py  test_supply.py  test_valuation.py
