[project]
name = "strategic-alpha"
version = "0.1.0"
description = "Macro, supply-chain, valuation, and risk analytics for public companies"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9",
  "yfinance>=0.2",
  "pandas>=2.0",
  "numpy>=1.24",
  "networkx>=3.0",
  "matplotlib>=3.7",
  "requests>=2.31",
]

[project.scripts]
sal = "strategic_alpha.cli:app"

[build-system]
requires = ["setuptools<=58.0.4", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["strategic_alpha"]
